--- a/css/map.css
+++ b/css/map.css
@@ -1,11 +1,11 @@
     #kiblaMap {
-    background:#e6e6e6;
-	 display: block;
-    position:absolute;
-    height:auto;
-    bottom:0;
-    top:0;
-    left:0;
-    right:0;
-    margin-top:50px; /* adjust top margin to your header height */  
-	}
+	background: transparent;
+	display: block;
+	position: absolute;
+	height: auto;
+	bottom: 0;
+	top: 0;
+	left: 0;
+	right: 0;
+	margin-top: 2px; /* adjust top margin to your header height */
+}
